// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createDmSegmentValue(chat, segment) jobs from all kinds og segment 1`] = `
[
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "twtr.12345.67890",
    "mediaSources": null,
    "refreshTarget": null,
    "request": {
      "method": "POST",
      "params": {
        "event": {
          "message_create": {
            "message_data": {
              "attachment": undefined,
              "text": "Hello",
            },
            "target": {
              "recipient_id": "",
            },
          },
          "type": "message_create",
        },
      },
      "url": "1.1/direct_messages/events/new.json",
    },
    "target": TwitterChat {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "userId": "67890",
    },
  },
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "twtr.12345.67890",
    "mediaSources": [
      {
        "id": "11111",
        "type": "id",
      },
    ],
    "refreshTarget": null,
    "request": {
      "method": "POST",
      "params": {
        "event": {
          "message_create": {
            "message_data": {
              "attachment": {
                "media": {
                  "id": "",
                },
                "type": "media",
              },
              "text": undefined,
            },
            "target": {
              "recipient_id": "",
            },
          },
          "type": "message_create",
        },
      },
      "url": "1.1/direct_messages/events/new.json",
    },
    "target": TwitterChat {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "userId": "67890",
    },
  },
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "twtr.12345.67890",
    "mediaSources": [
      {
        "id": "22222",
        "type": "id",
      },
    ],
    "refreshTarget": null,
    "request": {
      "method": "POST",
      "params": {
        "event": {
          "message_create": {
            "message_data": {
              "attachment": {
                "media": {
                  "id": "",
                },
                "type": "media",
              },
              "text": "World",
            },
            "target": {
              "recipient_id": "",
            },
          },
          "type": "message_create",
        },
      },
      "url": "1.1/direct_messages/events/new.json",
    },
    "target": TwitterChat {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "userId": "67890",
    },
  },
  {
    "accomplishRequest": null,
    "asApplication": false,
    "key": "twtr.12345.67890",
    "mediaSources": null,
    "refreshTarget": null,
    "request": {
      "href": "1.1/foo",
      "method": "POST",
      "params": {},
    },
    "target": TwitterChat {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "userId": "67890",
    },
  },
]
`;

exports[`createTweetJobs(options)(tweetTarget, segments) more continuous media that exceed the limit of a tweet 1`] = `
[
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": [
      {
        "id": "11111",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "text": "Hello",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": [
      {
        "id": "22222",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "text": undefined,
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": [
      {
        "id": "33333",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "text": undefined,
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": [
      {
        "id": "44444",
        "type": "id",
      },
      {
        "id": "55555",
        "type": "id",
      },
      {
        "id": "66666",
        "type": "id",
      },
      {
        "id": "77777",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "text": "World",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": [
      {
        "id": "88888",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "text": undefined,
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
]
`;

exports[`createTweetJobs(options)(tweetTarget, segments) with media, poll and quote tweet 1`] = `
[
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": null,
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "poll": {
          "duration": 60,
          "options": [
            "foo",
            "bar",
          ],
        },
        "text": "Yo",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": [
      {
        "id": "11111",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "text": undefined,
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": null,
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "quote_tweet_id": "98765",
        "text": "Hi",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": [
      {
        "id": "22222",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "text": undefined,
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": [
      {
        "id": "33333",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "text": "Howdy",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": [
      {
        "id": "44444",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "text": undefined,
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
]
`;

exports[`createTweetJobs(options)(tweetTarget, segments) with text and media 1`] = `
[
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": [
      {
        "id": "11111",
        "type": "id",
      },
      {
        "id": "22222",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "text": "Hello",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": null,
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "text": "World",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": [
      {
        "id": "33333",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "text": undefined,
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": [
      {
        "id": "44444",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "text": "Haro",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
  {
    "accomplishRequest": null,
    "asApplication": false,
    "key": "123",
    "mediaSources": null,
    "refreshTarget": [Function],
    "request": {
      "href": "1.1/foo",
      "method": "POST",
      "params": {},
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": undefined,
    },
  },
]
`;

exports[`createTweetJobs(options)(tweetTarget, segments) with text longer than the limit tweet 1`] = `
[
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": null,
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "text": "龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜龍龜",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": "56789",
    },
  },
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": "123",
    "mediaSources": [
      {
        "id": "11111",
        "type": "id",
      },
    ],
    "refreshTarget": [Function],
    "request": {
      "method": "POST",
      "params": {
        "text": "龍龜",
      },
      "url": "2/tweets",
    },
    "target": TwitterTweetTarget {
      "$$typeofThread": true,
      "agentId": "12345",
      "platform": "twitter",
      "tweetId": "56789",
    },
  },
]
`;

exports[`createWelcomeMessageJobs with dm segment 1`] = `
[
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": undefined,
    "mediaSources": [
      {
        "id": "1234567890",
        "type": "id",
      },
    ],
    "refreshTarget": null,
    "request": {
      "method": "POST",
      "params": {
        "event": {
          "message_create": {
            "message_data": {
              "attachment": {
                "media": {
                  "id": "",
                },
                "type": "media",
              },
              "text": "Foo!",
            },
            "target": {
              "recipient_id": "",
            },
          },
          "type": "message_create",
        },
      },
      "url": "1.1/direct_messages/events/new.json",
    },
    "target": TwitterChat {
      "$$typeofThread": true,
      "agentId": "",
      "platform": "twitter",
      "userId": "",
    },
  },
]
`;

exports[`createWelcomeMessageJobs with media segment 1`] = `
[
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": undefined,
    "mediaSources": [
      {
        "params": {
          "media_category": "dm_image",
        },
        "type": "url",
        "url": "http://...",
      },
    ],
    "refreshTarget": null,
    "request": {
      "method": "POST",
      "params": {
        "event": {
          "message_create": {
            "message_data": {
              "attachment": {
                "media": {
                  "id": "",
                },
                "type": "media",
              },
              "text": undefined,
            },
            "target": {
              "recipient_id": "",
            },
          },
          "type": "message_create",
        },
      },
      "url": "1.1/direct_messages/events/new.json",
    },
    "target": TwitterChat {
      "$$typeofThread": true,
      "agentId": "",
      "platform": "twitter",
      "userId": "",
    },
  },
]
`;

exports[`createWelcomeMessageJobs with text segment 1`] = `
[
  {
    "accomplishRequest": [Function],
    "asApplication": false,
    "key": undefined,
    "mediaSources": null,
    "refreshTarget": null,
    "request": {
      "method": "POST",
      "params": {
        "event": {
          "message_create": {
            "message_data": {
              "attachment": undefined,
              "text": "Foo!",
            },
            "target": {
              "recipient_id": "",
            },
          },
          "type": "message_create",
        },
      },
      "url": "1.1/direct_messages/events/new.json",
    },
    "target": TwitterChat {
      "$$typeofThread": true,
      "agentId": "",
      "platform": "twitter",
      "userId": "",
    },
  },
]
`;
